--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ url: 'https://finterly.github.io'
 baseurl: '/art.github.io'
 
 theme: jekyll-theme-cayman
+logo_url: https://github.githubassets.com/images/icons/emoji/octocat.png
