--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: 'https://finterly.github.io'
-baseurl: ''
+baseurl: '/art.github.io'
 
 theme: jekyll-theme-cayman
 logo_url: 'https://pathvisio.github.io/images/logos/pathvisio-logo-transparent.png'
